fix: rewards to distribution usd estimate on mobile screens

--- a/src/components/ClubStats.scss
+++ b/src/components/ClubStats.scss
@@ -19,6 +19,13 @@
   .DepositButton {
     border: 1px solid $blue800;
   }
+  .RewardsToDistribute {
+    .NumericalBlock__subtitle {
+      @media screen and (max-width: 500px) {
+        margin: -1em auto 2em !important;
+      }
+    }
+  }
 
   &__pill,
   .AvatarBadgeRow {
